--- a/requirements.txt
+++ b/requirements.txt
@@ -59,7 +59,7 @@ matplotlib-inline==0.1.3
 mistune==0.8.4
 mpmath==1.2.1
 munkres==1.1.4
-
+nb-conda-kernels==2.3.1
 nbclassic==0.3.7
 nbclient==0.5.13
 nbconvert==6.4.5
