--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
+bqplot==0.12.33
 ipyleaflet==0.16.0
 ipympl==0.9.0
 ipython==7.32.0
 ipyvolume==0.6.0a8
 ipywidgets==7.7.0
 matplotlib==3.5.1
+nodejs==17.9.0
 numpy==1.21.6
 pandas==1.3.5
 requests==2.27.1
