--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
-bqplot==0.12.33
-ipyleaflet==0.16.0
-ipympl==0.9.0
-ipython==7.32.0
-ipyvolume==0.6.0a8
-ipywidgets==7.7.0
-matplotlib==3.5.1
+bqplot
+ipyleaflet
+ipympl
+ipython
+ipyvolume
+ipywidgets
+matplotlib
 nodejs
-numpy==1.21.6
-pandas==1.3.5
-requests==2.27.1
-scipy==1.7.3
-sympy==1.10.1
-voila==0.3.5
+numpy
+pandas
+requests
+scipy
+sympy
+voila
