--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,14 @@
-bqplot
-ipyleaflet
-ipympl
-ipython
+ipyleaflet==0.15.0
+ipython==7.32.0
 ipyvolume==0.6.0a8
-ipywidgets
-matplotlib
-nodejs
-numpy
-pandas
-requests
+ipywidgets==7.7.0
+matplotlib==3.4.3
+numpy==1.20.3
+pandas==1.3.4
+requests==2.26.0
+scipy==1.7.1
+sympy==1.9
+bqplot
+ipympl
 scipy
-sympy
 voila
-jinja2
-jupyterlab==3
