--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ ipython==7.32.0
 ipyvolume==0.6.0a8
 ipywidgets==7.7.0
 matplotlib==3.4.3
-numpy==1.20.3
+numpy>=1.21
 pandas==1.3.4
 requests==2.26.0
 scipy==1.7.1
