--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
-ipyleaflet==0.15.0
+ipyleaflet==0.15
 ipython==7.32.0
 ipyvolume==0.6.0a8
-ipywidgets==7.7.0
-matplotlib==3.4.3
+ipywidgets==7.7.1
+matplotlib=3.7.1
 numpy>=1.21
-pandas==1.3.4
+pandas==2.0.2
 requests==2.26.0
-scipy==1.7.1
+scipy==1.10.1
 sympy==1.9
-scikit-image==0.19.2
-bqplot
-ipympl
-voila
+scikit-image
+bqplot==0.12.39
+ipympl==0.9.3
+voila==0.3.6
