--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ ipyleaflet==0.15
 ipython==7.32.0
 ipyvolume==0.6.0a8
 ipywidgets==7.7.1
-matplotlib=3.7.1
+matplotlib==3.7.1
 numpy>=1.21
 pandas==2.0.2
 requests==2.26.0
